data/derived/fa15/progs/unify/prog2624.ml.out
Characters 74-109:
  else loop ((sumList(digitsOfInt x)) + y) in
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
